[Background Fetch] Respond to service worker database deletion.

by abandoning all ongoing fetches for the storage partition.

Bug: 841385
Change-Id: I6fc990304272832fe0e8d993281a0aa06d083e75
Reviewed-on: https://chromium-review.googlesource.com/1087065
Commit-Queue: Mugdha Lakhani <nator@chromium.org>
Reviewed-by: Peter Beverloo <peter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566039}
Former-commit-id: e205bc26ed0bd2468ee6dbe893115c57cb895eb6